nueva forma de generar el build

--- a/Angular/02-bases/angular.json
+++ b/Angular/02-bases/angular.json
@@ -23,7 +23,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/bases",
+            "outputPath": "docs",
+            "baseHref":"./",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
